# dasy

./: .dev-reqs.txt  .gitattributes  .gitignore  .projectile  AGENTS.md  CLAUDE.md  DASY_0.2.0_ANNOUNCEMENT.md  IMPLEMENTATION_PROGRESS.md  IMPROVEMENT_PLAN.md  README.org  REVIEW.md  VYPER_0.4.2_MIGRATION.md  VYPER_0.4.2_MIGRATION_STATUS.md  VYPER_0.4.2_UPGRADE.md  VYPER_AST_MIGRATION.md  dasybyexample.md  dasybyexample.org  debug_ast.py  debug_compile.py  docs.md  docs.org  experiment.hy  experiment.py  hello_world.dasy  hello_world.vy  noret.dasy  pyproject.toml  requirements.txt  sitecustomize.py  suggestions.md  test_int_division.py  test_loop_types.py  test_module_system.py  test_struct.py  tmp.vy
.github/workflows/: install.yml  python-app.yml  test.yml
dasy/: README.org  __init__.py  compiler.py  exceptions.py  main.py  vyper_compat.py
dasy/builtin/: functions.py  macros.hy
dasy/cli/: helpers.hy  main.hy  vyper.hy
dasy/macro/: syntax.py  syntax_rules.py
dasy/parser/: __init__.py  binops.py  builtins.hy  builtins.py  comparisons.py  compat.py  context.py  core.py  expander.py  macro_context.py  macro_utils.py  macros.hy  macros.py  macros2.py  nodes.py  ops.py  output.py  parse.py  reader.py  stmt.py  utils.hy  utils.py
dasy/tools/: __init__.py  dasy2vyper.py  emit_common.py  vyper2dasy.py
examples/: ERC20.dasy  Transient.vy  constants.dasy  constructor.dasy  default_function.dasy  delegate_call.dasy  dynamic_arrays.dasy  enum.dasy  error.dasy  event.dasy  flag.dasy  for_loop.dasy  function_visibility.dasy  functions.dasy  hashing.dasy  hello_world.dasy  if_else.dasy  immutable.dasy  infix_macro.dasy  interface.dasy  interface_arity_caller.dasy  mock_factory.dasy  mock_token.dasy  mutable_hello.dasy  nonreentrant.dasy  nonreentrant2.dasy  nonreentrantenforcer.dasy  nonreentrantenforcer.vy  payable.dasy  private_public_state.dasy  raw_call.dasy  reference_types.dasy  selfdestruct.dasy  send_ether.dasy  simple_auction.dasy  test_delegate_call.dasy  test_interface.dasy  test_interface.vy  test_interface_arities.dasy  transient_nonreentrant.dasy  (+5 more)
scripts/: .gitignore  install.sh
tests/: test_dasy.py  test_dasy_vyper.py  test_examples_compile.py  test_no_vyper_warnings.py
tests/parser/: test_utils.py
