[project]
name = "dasy"
version = "0.1.29"
description = "an evm lisp"
authors = [{name = "z80", email = "z80@ophy.xyz"}]
requires-python = ">=3.10, <3.12"
dependencies = [
    "argparse>=1.4.0",
    "hy>=1.1.0",
    "hyrule>=0.6.0",
    "vyper==0.4.3",
    "eth-abi>=4.0.0",
    "eth-typing>=3.2.0",
    "py-evm>=0.6.1a2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=22.8.0",
    "titanoboa==0.2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dasy = "dasy:main"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore::DeprecationWarning',
]
