[project]
name = "dasy"
version = "0.1.29"
description = "an evm lisp"
authors = [{name = "z80", email = "z80@ophy.xyz"}]
requires-python = ">=3.10, <3.12"
dependencies = [
    "argparse>=1.4.0",
    "hy>=1.1.0",
    "hyrule>=0.6.0",
    # Support latest 0.4.x while keeping 0.4.2 compatible
    "vyper>=0.4.2,<0.5",
    "eth-abi>=4.0.0",
    "eth-typing>=3.2.0",
    "py-evm>=0.6.1a2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=22.8.0",
]
boa_v042 = [
    # titanoboa release compatible with vyper 0.4.2 for running boa tests
    "titanoboa==0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dasy = "dasy:main"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore::DeprecationWarning',
]
