[project]
name = "dasy"
version = "0.1.29"
description = "an evm lisp"
authors = [{name = "z80", email = "z80@ophy.xyz"}]
requires-python = ">=3.10, <3.12"
dependencies = [
        "hy>=1.1.0",
    "hyrule>=0.6.0",
    # Target a single supported Vyper version (no shims)
    "vyper==0.4.3",
    "eth-abi>=4.0.0",
    "eth-typing>=3.2.0",
    "py-evm>=0.6.1a2",
]

readme = "README.org"
keywords = ["evm", "vyper", "lisp", "smart-contracts", "ethereum", "compiler"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/dasylang/dasy"
Repository = "https://github.com/dasylang/dasy"
Issues = "https://github.com/dasylang/dasy/issues"
Documentation = "https://github.com/dasylang/dasy#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=22.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dasy = "dasy.main:main"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore::DeprecationWarning',
]
